--- a/netlify.toml
+++ b/netlify.toml
@@ -3,23 +3,34 @@
   publish = ".next"
 
 [build.environment]
+  # Use LTS version of Node.js
+  NODE_VERSION = "18.18.2"
+  NPM_VERSION = "9.8.1"
   NEXT_TELEMETRY_DISABLED = "1"
-  NODE_VERSION = "20.11.1"
-  NPM_VERSION = "10.2.4"
+  # Enable Next.js static export
+  NEXT_EXPORT = "true"
 
+[context.production.environment]
+  NODE_ENV = "production"
+
+# Netlify Next.js plugin configuration
 [[plugins]]
   package = "@netlify/plugin-nextjs"
   [plugins.inputs]
-    buildCommand = "next build"
-    publish = ".next"
+    # Override the default build command
+    buildCommand = "next build && next export"
+    # Set the publish directory to the output directory
+    publish = "out"
 
+# Redirects configuration
 [[redirects]]
   from = "/*"
   to = "/index.html"
   status = 200
 
+# Development server configuration
 [dev]
   command = "next dev"
-  targetPort = 3000
-  publish = ".next"
   port = 3000
+  publish = ".next"
+  targetPort = 3000
